--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body>
     <div class="app">
         <div class="app_header">
-            <h1 id="time-header">Время игры : <span id="time">5.0</span></h1>
-            <h1 id="result-header" class="hide">Ваш результат : <span id="result"></span></h1>
+            <h1 id="time-header">Количество попыток: <span id="time">5.0</span></h1>
+            <h1 id="result-header" class="hide">Ваш результат: <span id="result"></span></h1>
         </div>
         <div class="app__content">
             <button class="btn" id="start">Начать</button>
             <div class="game" id="game"></div>
         </div>
         <div class="app__footer">
-            
+
         </div>
 
 
     </div>
-    
+<script src="js/script.js"></script>    
 </body>
 </html>
